src/test/test-models/bad/reserved/cov_matrix.stan
data {
  real cov_matrix;
}
model {
}
